--- a/playerAnd/src/main/res/values/strings.xml
+++ b/playerAnd/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="action_settings">Settings</string>
     <string name="btn_prev">Prev</string>
     <string name="btn_next">Next</string>
+    <string name="btn_roll">Roll</string>
     <string name="btn_create">Create</string>
     <string name="attr_str">STR</string>
     <string name="attr_con">CON</string>
