--- a/playerAnd/src/main/res/values/strings.xml
+++ b/playerAnd/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="attr_cha">CHA</string>
     <string name="error_empty">No elements</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
